tests/baselines/reference/classStaticBlock9(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
classStaticBlock9.ts(2,20): error TS2729: Property 'foo' is used before its initialization.
classStaticBlock9.ts(4,11): error TS2729: Property 'foo' is used before its initialization.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== classStaticBlock9.ts (2 errors) ====
    class A {
        static bar = A.foo + 1
                       ~~~
!!! error TS2729: Property 'foo' is used before its initialization.
!!! related TS2728 classStaticBlock9.ts:6:12: 'foo' is declared here.
        static {
            A.foo + 2;
              ~~~
!!! error TS2729: Property 'foo' is used before its initialization.
!!! related TS2728 classStaticBlock9.ts:6:12: 'foo' is declared here.
        }
        static foo = 1;
    }
    